--- a/my_app/docker-compose.yml
+++ b/my_app/docker-compose.yml
@@ -13,7 +13,7 @@ services:
   # MongoDB as a service
   mongo:
     image: mongo
-    restart: always
+    restart: unless-stopped
     environment:
       MONGO_INITDB_ROOT_USERNAME: "my_app_user"
       MONGO_INITDB_ROOT_PASSWORD: "4dm1n4dm1n"
