Finalize simple sql app with Docker

--- a/sql_app/docker-compose.yml
+++ b/sql_app/docker-compose.yml
@@ -8,10 +8,10 @@ services:
     ports:
       - "8000:8000"
     depends_on:
-      - postgres
+      - postgresserver
 
   # postgres as a service
-  postgres:
+  postgresserver:
     image: postgres
     restart: unless-stopped
     environment:
